infra/nats/31-service-client.yaml
apiVersion: v1
kind: Service
metadata:
  name: nats
  labels:
    app.kubernetes.io/name: nats
    app.kubernetes.io/component: client
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: nats
  ports:
    - name: client
      port: 4222
      targetPort: 4222
    - name: monitor
      port: 8222
      targetPort: 8222
